# PyCodeObfuscator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Examples/gibberish/: example_gibberish.py
Examples/helloworld/: example_helloworld_obf.py
PyCodeObfuscator/: PCO.py  PCO_obf.py  __init__.py  __main__.py
PyCodeObfuscator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
PyCodeObfuscator/Examples/: example_helloworld.py
PyCodeObfuscator/Examples/gibberish/: example_gibberish_obf.py
PyCodeObfuscator/Examples/helloworld/: example_helloworld.py
file_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
