[project]
name = "PyCodeObfuscator"
version = "1.2.5"
license = "MIT"
dependencies = [
    "termcolor",
]
classifiers=[
    "Programming Language :: Python :: 3",
]

[project.scripts]
PyCodeObfuscator = "PyCodeObfuscator.PCO:main"
PCO = "PyCodeObfuscator.PCO:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
